[package]
name = "buildlog-consultant"
version = "0.0.38"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>",]
edition = "2021"
license = "GPL-2.0+"
description = "buildlog parser and analyser"
repository = "https://github.com/jelmer/buildlog-consultant.git"
homepage = "https://github.com/jelmer/buildlog-consultant"

[workspace]
members = [ "buildlog-consultant-py",]

[workspace.dependencies]
pyo3 = { version = ">=0.21", features = ["py-clone"] }
serde_json = "1"

[features]
default = []
chatgpt = ["dep:chatgpt_rs"]
cli = ["dep:clap", "dep:env_logger"]

[[bin]]
name = "chatgpt-analyze-log"
path = "src/bin/chatgpt-analyze-log.rs"
required-features = ["chatgpt", "cli", "tokio"]

[[bin]]
name = "analyze-apt-log"
path = "src/bin/analyze-apt-log.rs"
required-features = ["cli"]

[[bin]]
name = "analyze-autopkgtest-log"
path = "src/bin/analyze-autopkgtest-log.rs"
required-features = ["cli"]

[dependencies]
pyo3 = { workspace = true }
inventory = "0.3"
regex = "1"
lazy_static = "1"
serde_json.workspace = true
serde = { version = "1", features = ["derive"] }
shlex = "1"
log = "0.4.20"
text-size = "1.1.1"
debversion = ">=0.3"
chrono = "0.4.31"
fancy-regex = "0.13.0"
lazy-regex = "3.0.2"
textwrap = "0.16.0"
chatgpt_rs = { version = "1", optional = true }
env_logger = { version = "0.11", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
serde_yaml = { version = "0.9" }
debian-control = "0.1.18"
