[package]
name = "buildlog-consultant"
version = "0.1.2"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>",]
edition = "2021"
license = "GPL-2.0+"
description = "buildlog parser and analyser"
repository = "https://github.com/jelmer/buildlog-consultant.git"
homepage = "https://github.com/jelmer/buildlog-consultant"
exclude = [".github", "disperse.conf", ".gitignore", "MANIFEST", "MANIFEST.in"]

[features]
default = ["cli"]
chatgpt = ["dep:chatgpt_rs"]
cli = ["dep:clap", "dep:env_logger"]

[[bin]]
name = "chatgpt-analyze-log"
path = "src/bin/chatgpt-analyze-log.rs"
required-features = ["chatgpt", "cli", "tokio"]

[[bin]]
name = "analyze-apt-log"
path = "src/bin/analyze-apt-log.rs"
required-features = ["cli"]

[[bin]]
name = "analyze-autopkgtest-log"
path = "src/bin/analyze-autopkgtest-log.rs"
required-features = ["cli"]

[[bin]]
name = "analyze-build-log"
path = "src/bin/analyze-build-log.rs"
required-features = ["cli"]

[[bin]]
name = "analyze-sbuild-log"
path = "src/bin/analyze-sbuild-log.rs"
required-features = ["cli"]

[dependencies]
inventory = "0.3"
regex = "1"
lazy_static = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
shlex = "1"
log = "0.4.20"
text-size = "1.1.1"
debversion = { version = ">=0.4,<0.6", features = ["serde"] }
chrono = "0.4.31"
fancy-regex = ">=0.14,< 0.17"
lazy-regex = "3.0.2"
textwrap = "0.16.0"
chatgpt_rs = { version = "1", optional = true }
env_logger = { version = ">=0.10", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
serde_yaml = { version = "0.9" }
debian-control = ">=0.1,<0.3"
maplit = "1.0.2"
pep508_rs = "0.9.1"

[dev-dependencies]
maplit = "1.0.2"
