[metadata]
name = buildlog-consultant
version = attr:buildlog_consultant.__version__
author = Jelmer Vernooĳ
author_email = jelmer@jelmer.uk
url = https://github.com/jelmer/buildlog-consultant
description = buildlog parser and analyser
long_description = file:README.md
project_urls =
    Repository=https://github.com/jelmer/buildlog-consultant.git

[options]
packages =
    buildlog_consultant
install_requires =
    python_debian
    PyYAML
    requirements-parser

[options.entry_points]
console_scripts =
    analyse-sbuild-log=buildlog_consultant.sbuild:main
    analyse-build-log=buildlog_consultant.common:main
    analyse-autopkgtest-log=buildlog_consultant.autopkgtest:main

[options.package_data]
buildlog_consultant =
    py.typed
